# farsish

./: README.md  noxfile.py  pyproject.toml
