[tool.poetry]
name = "farsish"
version = "0.1.0"
description = "The Farsish is library to convert finglish or phinglish to farsi or persian "
authors = ["me", "you"]

[tool.poetry.dependencies]
python = "3.8.6"
requests = "^2.24.0"
dynaconf = "^3.1.2"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
black = "19.10b0"
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
pytype = "^2020.10.8"
pylint = "^2.6.0"
nox = "^2020.8.22"

[tool.coverage.paths]
source = ["farsish", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["farsish"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
